[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/d_monigote_strip13.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Monigote.gd" type="Script" id=2]
[ext_resource path="res://Sounds/s_relleno.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "caminar"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 11, 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "quieto"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 9 ]
}

[node name="Monigote" type="Area2D" groups=["jugadores", "monigotes", "solidos", "sombreados"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cuerpo" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
hframes = 13
frame = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Bala0" type="Sprite" parent="Cuerpo"]
position = Vector2( 26, -71 )
texture = ExtResource( 1 )
hframes = 13
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Bala1" type="Sprite" parent="Cuerpo"]
position = Vector2( 18, -60 )
texture = ExtResource( 1 )
hframes = 13
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Bala2" type="Sprite" parent="Cuerpo"]
position = Vector2( 5, -51 )
texture = ExtResource( 1 )
hframes = 13
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Bala3" type="Sprite" parent="Cuerpo"]
position = Vector2( -7, -45 )
texture = ExtResource( 1 )
hframes = 13
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Bala4" type="Sprite" parent="Cuerpo"]
position = Vector2( -22, -43 )
texture = ExtResource( 1 )
hframes = 13
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Cabeza" type="Sprite" parent="Cuerpo"]
position = Vector2( 0, -75 )
texture = ExtResource( 1 )
hframes = 13
__meta__ = {
"_edit_lock_": true
}

[node name="Herida0" type="Sprite" parent="Cuerpo/Cabeza"]
position = Vector2( -17, -37 )
texture = ExtResource( 1 )
hframes = 13
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Herida1" type="Sprite" parent="Cuerpo/Cabeza"]
position = Vector2( -1, 0 )
texture = ExtResource( 1 )
hframes = 13
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Herida2" type="Sprite" parent="Cuerpo/Cabeza"]
position = Vector2( -18, -18 )
texture = ExtResource( 1 )
hframes = 13
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Herida3" type="Sprite" parent="Cuerpo/Cabeza"]
position = Vector2( 16, -19 )
texture = ExtResource( 1 )
hframes = 13
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Herida4" type="Sprite" parent="Cuerpo/Cabeza"]
position = Vector2( 18, -44 )
texture = ExtResource( 1 )
hframes = 13
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Corona" type="Sprite" parent="Cuerpo/Cabeza"]
position = Vector2( 0, -62 )
texture = ExtResource( 1 )
hframes = 13
frame = 7
__meta__ = {
"_edit_lock_": true
}

[node name="NomSom" type="Label" parent="."]
margin_left = -52.0
margin_top = -80.0
margin_right = 52.0
margin_bottom = -58.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Nombre" type="Label" parent="."]
margin_left = -52.0
margin_top = -80.0
margin_right = 52.0
margin_bottom = -58.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Errar" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Recarga" type="Timer" parent="."]
one_shot = true

[node name="Tiro" type="Timer" parent="."]
one_shot = true

[node name="Anima" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/RESET = SubResource( 2 )
anims/caminar = SubResource( 3 )
anims/quieto = SubResource( 4 )

[node name="AudHerido" type="AudioStreamPlayer" parent="."]
volume_db = -2.0

[node name="AudRecarga" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0

[connection signal="area_entered" from="." to="." method="_on_Monigote_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Monigote_area_exited"]
[connection signal="timeout" from="Errar" to="." method="_on_Errar_timeout"]
[connection signal="timeout" from="Recarga" to="." method="_on_Recarga_timeout"]
